--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,39 +23,39 @@ stages:
         arguments: 'deployments'
         secretType: 'dockerRegistry'
       name: "kubs"
-  - job: getvars
-    dependsOn: 
-    - connectkube
-    condition: succeeded()
-    steps:
-      - task: CmdLine@2
-        inputs:
-          script: |
-            ls -ll
-            echo "------"
-            dockerhubversion=$((curl 'https://hub.docker.com/v2/repositories/alaincpn/voteapp/tags' | jq '."results"[0]["name"]')| sed 's/\"//g')
-            echo "Version sur dockerhub : "
-            echo $dockerhubversion
-            kubeoutputversion=$(echo $KUBS_KUBECTLOUTPUT | jq '.items[1].spec.template.spec.containers[].image' | cut -d: -f2 | sed 's/"//')
-            echo "Version output kubectl : "
-            echo $kubeoutputversion
-            scriptversion=$(cat azure-vote/main.py | grep -E "^ver = \"[0-9.]+\"\$"|awk -F\" {'print $2'})
-            echo "Version dans le script : "
-            echo $scriptversion
-            echo "##vso[task.setvariable variable=dockversion;isOutput=true]$dockerhubversion"
-            echo "##vso[task.setvariable variable=kubeoutpversion;isOutput=true]$kubeoutputversion"
-            echo "##vso[task.setvariable variable=scrversion;isOutput=true]$scriptversion"
-            sed -i 's/{{ version }}/'$scriptversion'/g' app/app.yml
-            cat app/app.yml
-        name: vers
+  # - job: getvars
+  #   dependsOn: 
+  #   - connectkube
+  #   condition: succeeded()
+  #   steps:
+    - task: CmdLine@2
+      inputs:
+        script: |
+          ls -ll
+          echo "------"
+          dockerhubversion=$((curl 'https://hub.docker.com/v2/repositories/alaincpn/voteapp/tags' | jq '."results"[0]["name"]')| sed 's/\"//g')
+          echo "Version sur dockerhub : "
+          echo $dockerhubversion
+          kubeoutputversion=$(echo $KUBS_KUBECTLOUTPUT | jq '.items[1].spec.template.spec.containers[].image' | cut -d: -f2 | sed 's/"//')
+          echo "Version output kubectl : "
+          echo $kubeoutputversion
+          scriptversion=$(cat azure-vote/main.py | grep -E "^ver = \"[0-9.]+\"\$"|awk -F\" {'print $2'})
+          echo "Version dans le script : "
+          echo $scriptversion
+          echo "##vso[task.setvariable variable=dockversion;isOutput=true]$dockerhubversion"
+          echo "##vso[task.setvariable variable=kubeoutpversion;isOutput=true]$kubeoutputversion"
+          echo "##vso[task.setvariable variable=scrversion;isOutput=true]$scriptversion"
+          sed -i 's/{{ version }}/'$scriptversion'/g' app/app.yml
+          cat app/app.yml
+      name: vers
 
   - job: qaldeploy
     dependsOn:
     - getvars
     condition: succeeded()
     variables:
-      oldversion: $[ dependencies.kubesetup.getvars.outputs['vers.kubeoutpversion'] ]
-      newversion: $[ dependencies.kubesetup.getvars.outputs['vers.scrversion'] ]
+      oldversion: $[ dependencies.kubesetup.connectkube.outputs['vers.kubeoutpversion'] ]
+      newversion: $[ dependencies.kubesetup.connectkube.outputs['vers.scrversion'] ]
     displayName: qaldeploy
     pool:
       vmImage: ubuntu-latest 
