Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,7 +51,7 @@ stages:
 
   - job: qaldeploy
     dependsOn:
-    - getvars
+    - connectkube
     condition: succeeded()
     variables:
       oldversion: $[ dependencies.kubesetup.connectkube.outputs['vers.kubeoutpversion'] ]
