Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -66,8 +66,8 @@ stages:
         targetType: 'inline'
         script: |
           echo "outputs"
-          echo $oldversion
-          echo $newversion
+          echo $(oldversion)
+          echo $(newversion)
 
     # - task: Bash@3
     #   inputs:
