--- a/app/appdeploy.yml
+++ b/app/appdeploy.yml
@@ -53,9 +53,9 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: lbappvote
+  name: clustvoteapp
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
   - port: 80
   selector:
