--- a/app/app-deploy.yml
+++ b/app/app-deploy.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: appvote
-        image: alaincpn/voteapp:{{ version }}
+        image: alaincpn/voteapp:1.0.124
         resources:
           requests:
             cpu: 250m
