Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,7 @@ stages:
           echo "##vso[task.setvariable variable=vernew]$versionnew"
   
     - task: Docker@2
-      name: CreateDocImage
+      name: CreateDockerImage
       displayName: create dockerhub image
       condition: ne(variables.verold,variables.vernew)
       inputs:
