--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,25 @@
 trigger:
 - master
 
+pool:
+  vmImage: ubuntu-latest
+
+stages:
+- stage: kubesetup
+  jobs:
+  - job: connectkube
+    steps:
+
+    - task: Kubernetes@1
+      inputs:
+        connectionType: 'Kubernetes Service Connection'
+        kubernetesServiceEndpoint: 'aks-connection'
+        namespace: 'qal'
+        command: 'get'
+        arguments: 'deployments'
+        secretType: 'dockerRegistry'
+      name: "kubs"
+
 stages:
 - stage: Build_docker_image
   displayName: Build docker image 
