--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,3 +49,27 @@ stages:
         command: 'buildAndPush'
         Dockerfile: 'Dockerfile'
         tags: 'latest'
+
+- stage: QAL_Deployment
+  displayName: Qal
+  jobs:
+  - job: QAL_Deploy
+    displayName: Deploy on QAL 
+    pool:
+      vmImage: 'ubuntu-latest' 
+    steps:
+    - task: KubernetesManifest@0
+      name: kubeonqal
+      displayName: deploy on qal ns
+      inputs:
+        action: 'deploy'
+        kubernetesServiceConnection: 'container-connection'
+        namespace: 'qal'
+        manifests: '**/app/qal/*'
+    - task: Bash@3
+      name: waitingfordeploy
+      condition: succeeded()
+      displayName: waiting for deployment
+      inputs:
+        targetType: 'inline'
+        script: 'sleep 45'
