--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -78,7 +78,7 @@ stages:
       name : recupPods
       inputs:
         connectionType: 'Kubernetes Service Connection'
-        kubernetesServiceEndpoint: 'aks-conection'
+        kubernetesServiceEndpoint: 'aks-connection'
         namespace: 'qal'
         command: 'get'
         useConfigurationFile: true
