--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -63,17 +63,17 @@ stages:
         targetType: 'inline'
         script: 'sleep 15'
 
-    - task: CmdLine@2
-      name : testcharge
-      displayName: Test charge sur qal
-      inputs:
-        script: |
-          seq 250 | parallel --max-args 0  --jobs 20 "curl -k -iF 'vote=free' http://lain-brief8.westeurope.cloudapp.azure.com"
+    # - task: CmdLine@2
+    #   name : testcharge
+    #   displayName: Test charge sur qal
+    #   inputs:
+    #     script: |
+    #       seq 250 | parallel --max-args 0  --jobs 20 "curl -k -iF 'vote=free' http://lain-brief8.westeurope.cloudapp.azure.com"
 
-    - task: CmdLine@2
-      name: waitforcharge
-      inputs:
-        script: 'sleep 60'
+    # - task: CmdLine@2
+    #   name: waitforcharge
+    #   inputs:
+    #     script: 'sleep 60'
 
     - task: Kubernetes@1
       name : recupNbPods
@@ -87,23 +87,23 @@ stages:
         secretType: 'dockerRegistry'
         containerRegistryType: 'Azure Container Registry'
 
-    - task: CmdLine@2
-      name: nbpod
-      inputs:
-        script: |
-          nbrpod=$(echo $RECUPNBPODS_KUBECTLOUTPUT | jq '.items[0].spec.replicas')
-          echo $nbrpod
-          echo "##vso[task.setvariable variable=podnumber;isOutput=true]$nbrpod"
-    - task: CmdLine@2
-      condition: ne(variables['podnumber'],2)
-      name: scalework
-      inputs:
-        script: echo 'Scaling complete'
+    # - task: CmdLine@2
+    #   name: nbpod
+    #   inputs:
+    #     script: |
+    #       nbrpod=$(echo $RECUPNBPODS_KUBECTLOUTPUT | jq '.items[0].spec.replicas')
+    #       echo $nbrpod
+    #       echo "##vso[task.setvariable variable=podnumber;isOutput=true]$nbrpod"
+    # - task: CmdLine@2
+    #   condition: ne(variables['podnumber'],2)
+    #   name: scalework
+    #   inputs:
+    #     script: echo 'Scaling complete'
 
     - task: dependency-check-build-task@6
       inputs:
         projectName: 'SecurityScan'
-        scanPath: './app/qal'
+        scanPath: '**'
         format: 'JSON'
         failOnCVSS: '8'
         additionalArguments: 
