--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -117,9 +117,11 @@ stages:
           failOnCVSS: '8'
           additionalArguments: 
 
-      # - task: CmdLine@2
-      #   displayName: Comparaison version application
-      #   inputs:
-      #     script: |
-      #       resultest=$(cat ./ | grep -E "^ver = \"[0-9.]+\"\$"|awk -F\" {'print $2'})
-      #       echo "##vso[task.setvariable variable=restest]$resultest"
+      - task: CmdLine@2
+        displayName: check-nb-dependencies
+        inputs:
+          script: |
+            resultest=$(cat ./home/vsts/work/1/TestResults/dependency-check/testreport/dependency-check-report.html | grep -E "^Vulnerabilities = \"[0-9.]+\"\$"|awk -F\" {'print $2'})
+            echo "#####DEBUG#####"
+            echo resultest
+            echo "##vso[task.setvariable variable=restest]$resultest"
