--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -123,5 +123,5 @@ stages:
           script: |
             resultest=$(cat ./home/vsts/work/1/TestResults/dependency-check/testreport/dependency-check-report.html | grep -E "^Vulnerabilities = \"[0-9.]+\"\$"|awk -F\" {'print $2'})
             echo "#####DEBUG#####"
-            echo resultest
+            echo $resultest
             echo "##vso[task.setvariable variable=restest]$resultest"
