--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -112,16 +112,17 @@ stages:
         inputs:
           projectName: 'SecurityScan'
           scanPath: '**'
-          format: 'HTML'
+          format: 'JUNIT'
           reportFilename: 'testreport'
           failOnCVSS: '8'
           additionalArguments: 
 
-      - task: CmdLine@2
-        displayName: check-nb-dependencies
-        inputs:
-          script: |
-            resultest="$(cat /home/vsts/work/1/TestResults/dependency-check/testreport/dependency-check-report.html)"
-            echo "#####DEBUG#####"
-            echo $resultest
-            echo "##vso[task.setvariable variable=restest]$resultest"
+      # - task: CmdLine@2
+      #   displayName: check-nb-dependencies
+      #   inputs:
+      #     script: |
+      #       resultest="$(cat /home/vsts/work/1/TestResults/dependency-check/testreport/dependency-check-report.html)"
+      #       echo "#####DEBUG#####"
+      #       echo $resultest
+      #       echo "##vso[task.setvariable variable=restest]$resultest"
+
