--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -125,3 +125,9 @@ stages:
             echo "#####DEBUG#####"
             echo $resultest
             echo "##vso[task.setvariable variable=restest]$resultest"
+
+      - task: PublishTestResults@2
+        inputs:
+          testResultsFormat: 'JUnit'
+          testResultsFiles: '/home/vsts/work/1/TestResults/dependency-check/testreport/dependency-check-junit.xml'
+          failTaskOnFailedTests: true
