--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -117,14 +117,14 @@ stages:
           failOnCVSS: '8'
           additionalArguments: 
 
-      - task: CmdLine@2
-        displayName: check-nb-dependencies
-        inputs:
-          script: |
-            resultest="$(cat /home/vsts/work/1/TestResults/dependency-check/testreport/dependency-check-junit.xml)"
-            echo "#####DEBUG#####"
-            echo $resultest
-            echo "##vso[task.setvariable variable=restest]$resultest"
+      # - task: CmdLine@2
+      #   displayName: check-nb-dependencies
+      #   inputs:
+      #     script: |
+      #       resultest="$(cat /home/vsts/work/1/TestResults/dependency-check/testreport/dependency-check-junit.xml)"
+      #       echo "#####DEBUG#####"
+      #       echo $resultest
+      #       echo "##vso[task.setvariable variable=restest]$resultest"
 
       - task: PublishTestResults@2
         inputs:
