--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -139,3 +139,22 @@ stages:
             docker run --rm -v $(pwd):/zap/wrk/:rw -t owasp/zap2docker-stable zap-full-scan.py -t http://lain-brief8.westeurope.cloudapp.azure.com/:80 -x report.xml
             true
         displayName: "Owasp Container Scan"
+
+      - task: PowerShell@2
+        inputs:
+          targetType: 'inline'
+          script: |
+            $XslPath = "./xml_to_nunit.xslt" 
+            $XmlInputPath = "report.xml"
+            $XmlOutputPath = "test-results.xml"
+            $XslTransform = New-Object System.Xml.Xsl.XslCompiledTransform
+            $XslTransform.Load($XslPath)
+            $XslTransform.Transform($XmlInputPath, $XmlOutputPath)
+        displayName: "PowerShell Script"
+
+      - task: PublishTestResults@2
+        displayName: 'Publish Test Results'
+        inputs:
+          testResultsFormat: 'NUnit'
+          testResultsFiles: './test-results.xml'
+          failTaskOnFailedTests: true
