--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -174,6 +174,6 @@ stages:
       timeoutInMinutes: 7800
       inputs:
         notifyUsers: |
-          acaupin.ext@simplonformations.onmicrosoft.com
+          simplon.alaincaupin@gmail.com@simplonformations.onmicrosoft.com
         instructions: 'Merci de valider le déploiement'
         onTimeout: 'resume'
