--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -177,3 +177,21 @@ stages:
           simplon.alaincaupin@gmail.com
         instructions: 'Merci de valider le déploiement'
         onTimeout: 'resume'
+
+- stage: QAL_Deployment
+  displayName: qaldep
+  jobs:
+  - job: QAL_Deploy
+    displayName: Deploy on QAL 
+    pool:
+      vmImage: 'ubuntu-latest' 
+    steps:
+
+    - task: KubernetesManifest@0
+      name: kuberneTest
+      displayName: deploy on Qal ns
+      inputs:
+        action: 'deploy'
+        kubernetesServiceConnection: 'aks-connection'
+        namespace: 'QAL'
+        manifests: '**/app/qal/*'
