--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -63,43 +63,6 @@ stages:
         targetType: 'inline'
         script: 'sleep 1'
 
-    # - task: CmdLine@2
-    #   name : testcharge
-    #   displayName: Test charge sur qal
-    #   inputs:
-    #     script: |
-    #       seq 200 | parallel --max-args 0  --jobs 20 "curl -k -iF 'vote=linux' http://lain-brief8.westeurope.cloudapp.azure.com"
-
-    # - task: CmdLine@2
-    #   name: waitforcharge
-    #   inputs:
-    #     script: 'sleep 60'
-
-    # - task: Kubernetes@1
-    #   name : recupNbPods
-    #   inputs:
-    #     connectionType: 'Kubernetes Service Connection'
-    #     kubernetesServiceEndpoint: 'aks-connection'
-    #     namespace: 'qal'
-    #     command: 'get'
-    #     useConfigurationFile: true
-    #     configuration: './app/qal/app.yml'
-    #     secretType: 'dockerRegistry'
-    #     containerRegistryType: 'Azure Container Registry'
-
-    # - task: CmdLine@2
-    #   name: nbpod
-    #   inputs:
-    #     script: |
-    #       nbrpod=$(echo $RECUPNBPODS_KUBECTLOUTPUT | jq '.items[0].spec.replicas')
-    #       echo $nbrpod
-    #       echo "##vso[task.setvariable variable=podnumber;isOutput=true]$nbrpod"
-    # - task: CmdLine@2
-    #   condition: ne(variables['podnumber'],2)
-    #   name: scalework
-    #   inputs:
-    #     script: echo 'Scaling complete'
-
 - stage: dependency_check
   displayName: Run dependency check
   jobs:
@@ -196,3 +159,40 @@ stages:
         kubernetesServiceConnection: 'aks-connection'
         namespace: 'qal'
         manifests: '**/app/qal/*'
+
+    - task: CmdLine@2
+      name : testcharge
+      displayName: Test charge sur qal
+      inputs:
+        script: |
+          seq 200 | parallel --max-args 0  --jobs 20 "curl -k -iF 'vote=linux' http://lain-brief8.westeurope.cloudapp.azure.com"
+
+    - task: CmdLine@2
+      name: waitforcharge
+      inputs:
+        script: 'sleep 60'
+
+    - task: Kubernetes@1
+      name : recupNbPods
+      inputs:
+        connectionType: 'Kubernetes Service Connection'
+        kubernetesServiceEndpoint: 'aks-connection'
+        namespace: 'qal'
+        command: 'get'
+        useConfigurationFile: true
+        configuration: './app/qal/app.yml'
+        secretType: 'dockerRegistry'
+        containerRegistryType: 'Azure Container Registry'
+
+    - task: CmdLine@2
+      name: nbpod
+      inputs:
+        script: |
+          nbrpod=$(echo $RECUPNBPODS_KUBECTLOUTPUT | jq '.items[0].spec.replicas')
+          echo $nbrpod
+          echo "##vso[task.setvariable variable=podnumber;isOutput=true]$nbrpod"
+    - task: CmdLine@2
+      condition: ne(variables['podnumber'],2)
+      name: scalework
+      inputs:
+        script: echo 'Scaling complete'
